細かいコメントを追加（試行錯誤中）

--- a/np_knn.ipynb
+++ b/np_knn.ipynb
@@ -109,35 +109,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "10000\n"
      ]
     }
    ],
    "source": [
     "xx0, xx1 = np.meshgrid(np.linspace(-5, 5, 100), np.linspace(-5, 5, 100))\n",
     "xx = np.array([xx0, xx1]).reshape(2, -1).T\n",
-    "print(len(np.array([xx0, xx1]).reshape(2, -1)))"
+    "print(len(xx[:,0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n",
-      "10000\n",
-      "50\n"
+      "[-5. -5.]\n",
+      "[ 37.62775519  37.06706997  15.85589943  36.56546387  33.35517743\n",
+      "  36.40150571  25.07231815  35.61349672  34.61091666  38.17917601\n",
+      "  31.72748687  23.55692945  44.77907911  26.5209716   46.02522454\n",
+      "  26.70941292  27.77496899  47.86312249  19.97310674  35.33669945\n",
+      "  48.37182622  44.04037912  21.19207409  46.15659231  28.73471883\n",
+      "  50.56961979  90.14626475  67.50710153  56.22102044  45.43643858\n",
+      "  60.10273446  79.43018251  44.28974593  80.5709974   97.47220659\n",
+      "  55.88230104  53.77451476  56.98087497  69.22885044  74.4892675\n",
+      "  86.28520848  68.77319872  60.1518962  100.38834853 112.55285281\n",
+      "  82.45983143  59.19870565  85.4948029   54.3436149   42.7139092 ]\n",
+      "[0]\n",
+      "[3]\n"
      ]
     }
    ],
@@ -149,38 +159,44 @@
     "X_test = xx\n",
     "k = 3\n",
     "\n",
-    "print(len(X_train))\n",
-    "print(len(X_test))\n",
-    "print(len(y_train))\n",
+    "# print((X_train))\n",
+    "print(X_test[0])\n",
+    "# print(len(y_train))\n",
+    "# print(distance(X_test[0], X_train))\n",
+    "distance1 = distance(X_test[0], X_train)\n",
+    "indexItem = distance1.argsort()[:k]\n",
+    "mode1, mode2 = stats.mode(y_train[indexItem])\n",
+    "print(distance1)\n",
+    "print(mode1)\n",
+    "print(mode2)\n",
+    "# Yのpredictを詰め込む空の配列を用意長さはX_testと同じ長さdtype→データのタイプでyのトレーニングデータと同じ\n",
     "y_pred = np.empty(len(X_test), dtype=y_train.dtype)\n",
+    "# iは0からの数値でインクリメントされる（通常使われるiと一緒）\n",
     "for i, x in enumerate(X_test):\n",
+    "    # X_trainは50個の要素、xは2個の要素\n",
     "    distances = distance(x, X_train)\n",
-    "    # sortしたインデックスの３列目を返す\n",
+    "    # sortしたインデックスの配列を返す(argsortメソッド)kはk近傍法のkの値を設定\n",
+    "    # 先頭のk個分、値を取得\n",
     "    nearest_index = distances.argsort()[:k]\n",
-    "    # 0か1の中で一番多く出てくる値を取得\n",
+    "    # 近くにあるプロットされている点の0か1の中で一番多く出てくる値を取得\n",
+    "    # _ は返却されてくる個数を表している（今回は未使用）\n",
     "    mode, _ = stats.mode(y_train[nearest_index])\n",
+    "    # 0か1の値をセット\n",
     "    y_pred[i] = mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x1a134f68d0>"
+       "<matplotlib.contour.QuadContourSet at 0x1a136067b8>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -197,7 +213,6 @@
    ],
    "source": [
     "plt.scatter(x_train[:, 0], x_train[:, 1], c=y_train)\n",
-    "print(len(y_pred))\n",
     "plt.contourf(xx0, xx1, y_pred.reshape(100, 100).astype(dtype=np.float), alpha=0.2, levels=np.linspace(0, 1, 3))"
    ]
   },
