--- a/FinalCNN.ipynb
+++ b/FinalCNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "# データセットのロード\n",
     "# iris.data = [(がく片の長さ , がく片の幅 , 花びらの長さ , 花びらの幅)]\n",
-    "iris = datasets.load_iris()"
+    "iris = datasets.load_iris()\n",
+    "# トレーニングデータ（80％）とテストデータ（20％）に分割\n",
+    "x_train, x_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.2, shuffle=True)"
    ]
   },
   {
@@ -46,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
